# study-abroad-matcher

./: .gitignore  main.py  pyproject.toml
scraper/: engine.py  errors.py  models.py
scraper/providers/: __init__.py  base_provider.py
scraper/providers/Japan/: keio_provider.py  keio_university.py
scraper/providers/United_Kingdom/: university_of_glasgow.py
