[project]
name = "study-abroad-matcher"
version = "0.1.0"
description = "Small application for finding matching courses from various universities"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "beautifulsoup4==4.14.2",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "mypy>=1.18.2",
    "orjson==3.11.4",
    "pydantic==2.12.4",
    "questionary>=2.1.1",
    "requests==2.32.5",
    "rich>=14.2.0",
    "types-html5lib>=1.1.11.20251117",
    "types-requests>=2.32.4.20250913",
]
